# unique-namer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: run-tests.yml
src/namer/: __init__.py  __main__.py
src/namer/data/: __init__.py  adjectives.py  animals.py  architecture.py  art.py  astronomy.py  biology.py  chemistry.py  computer_science.py  countries.py  economy.py  food.py  general.py  geography.py  history.py  literature.py  math.py  medicine.py  microbiology.py  misc.py  molecular_biology.py  music.py  physics.py  plants.py  scientists.py  sports.py  technology.py
tests/: test_.py
