[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unique-namer"
description = "Generate unique, human-readable, and memorable names or identifiers"
authors = [{name = "Andrzej Zielezinski", email = "a.zielezinski@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",

]
keywords = ["random", "unique", "name", "id", "generate", "namer"]
requires-python = ">=3.6"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "namer.__version__"}

[project.urls]
Homepage = "https://github.com/aziele/unique-namer"

[project.scripts]
namer = "namer.__main__:main"